# infinity

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Dockerfile-Arch  Kconfig  LICENSE  Makefile  README.md  SConstruct  Xargo.toml  build.rs  configure  configure.sh  x86_64-infinity_os.json  x86_64-unknown-none.json  x86_64-unknown-pulsar.json
arch/x86_64/: Cargo.toml  linker.ld
arch/x86_64/assembly/: boot.asm  long_mode_init.asm
arch/x86_64/src/: consts.rs  context.rs  kernel_messaging.rs  lib.rs  start.rs  vga_buffer.rs
arch/x86_64/src/acpi/: dsdt.rs  fadt.rs  mod.rs  rsdp.rs  rsdt.rs  sdt.rs  xsdt.rs
arch/x86_64/src/device/: local_apic.rs  mod.rs  rtc.rs
arch/x86_64/src/interrupts/: gdt.rs  ipi.rs  irq.rs  mod.rs
arch/x86_64/src/memory/: area_frame_allocator.rs  mod.rs
arch/x86_64/src/memory/paging/: mapper.rs  mod.rs
config/: Kconfig.arch  Kconfig.platform
filesystem/: init
initfs/: keep
libs/: .gitignore
libs/bump_allocator/: Cargo.toml
libs/bump_allocator/src/: lib.rs
libs/hole_list_allocator/: Cargo.toml
libs/hole_list_allocator/src/: lib.rs
libs/syscall/: Cargo.toml
libs/syscall/src/: data.rs  error.rs  flag.rs  lib.rs  number.rs  scheme.rs
mk/: config.mk  docker.mk  initfs.mk
programs/init/src/: main.rs
source/: SConscript
source/kernel/: Cargo.toml  SConscript  bootinfo.S
source/kernel/arch/x86/: Cargo.toml  linker.ld
source/kernel/src/: lib.rs  vga_buffer.rs
source/kernel/src/initium/: core_information.rs  core_tag.rs  elf_sections.rs  end_tag.rs  initium.rs  memory_map.rs  mod.rs  pagetables_tag.rs  tag.rs
source/kernel/src/interrupts/: idt.rs  mod.rs
source/kernel/src/memory/: area_frame_allocator.rs  mod.rs
source/kernel/src/memory/paging/: entry.rs  mod.rs  table.rs
src/: elf.rs  lib.rs  start.rs  time.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg
src/common/: int_like.rs
src/context/: context.rs  file.rs  list.rs  memory.rs  mod.rs  switch.rs
src/device/: local_apic.rs  mod.rs  rtc.rs  serial.rs
src/interrupts/: exceptions.rs  gdt.rs  mod.rs
src/libs/bump_allocator/: Cargo.toml
src/libs/bump_allocator/src/: lib.rs
src/memory/: mod.rs  stack_allocator.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/scheme/: inifs.rs  mod.rs
src/syscall/: fs.rs  mod.rs  process.rs
utilities/: SConscript
utilities/kconfig/: SConscript  confdata.c  expr.h  lex.zconf.c  lkc.h  mconf.c  util.c  zconf.l  zconf.tab.c  zconf.y
utilities/toolchain/: binutils-2.24-pulsar.patch  compiler-rt-3.4-pulsar.patch  gcc-4.8.1-no-fixinc.patch  gcc-4.8.1-pulsar.patch  llvm-3.4-pulsar.patch
utils/: lld.sh  rustc.sh
