[package]
authors = ["Gil Mendes <gil00mendes@gmail.com>", "Ivo Ribeiro <ivolopesribeiro15@gmail.com>"]
name = "infinity_os"
version = "0.1.0"

[dependencies]
bit_field = "0.7.0"
bitflags = "0.7.0"
multiboot2 = "0.1.0"
once = "0.3.2"
rlibc = "0.1.4"
spin = "0.3.4"
volatile = "0.1.0"
x86_64 = "0.1.1"

[dependencies.bump_allocator]
path = "libs/bump_allocator"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.2"

[lib]
crate-type = ["staticlib"]

[profile]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
