[package]
authors = ["Gil Mendes <gil00mendes@gmail.com>", "Ivo Ribeiro <ivolopesribeiro15@gmail.com>"]
name = "infinity_os"
version = "0.1.0"

[dependencies]
bit_field = "0.7.0"
bitflags = "0.7.0"
spin = "0.4.5"

[dependencies.arch_x86_64]
path = "arch/x86_64"

[lib]
crate-type = ["staticlib"]

[features]
default = []
live = []
