[package]
authors = ["Gil Mendes <gil00mendes@gmail.com>", "Ivo Ribeiro <ivolopesribeiro15@gmail.com>"]
name = "arch_x86_64"
version = "0.1.0"

[dependencies]
bit_field = "0.7.0"
bitflags = "0.7.0"
multiboot2 = "0.1.0"
once = "0.3.2"
raw-cpuid = "2.0.1"
rlibc = "0.1.4"
spin = "0.4.5"
volatile = "0.1.0"
x86_64 = "0.1.1"

[dependencies.hole_list_allocator]
path = "../../libs/hole_list_allocator"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.2"

[profile]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
