[package]
name = "kernel"
version = "0.1.0"
authors = ["Gil Mendes <gil00mendes@gmail.com>", "Ivo Ribeiro <ivolopesribeiro15@gmail.com>"]

[lib]
name = "kernel"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
spin = "0.4.5"
volatile = "0.1.0"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
