[package]
name = "kernel"
version = "0.1.0"
authors = ["Gil Mendes <gil00mendes@gmail.com>", "Ivo Ribeiro <ivolopesribeiro15@gmail.com>"]

[lib]
name = "kernel"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
spin = "0.4.5"
volatile = "0.2.3"
bit_field = "0.7.0"
bitflags = "0.8.0"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.2"

[dependencies.x86]
default-features = false
version = "0.8.1"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
